# rampup

./: .gitignore  .gitmodules  CMakeLists.txt  Phase-3.md  README.md
.github/workflows/: cmake.yml
ANSWERS/phase2/: answers.md
ANSWERS/phase3/: TMP117.cpp  answers.md
answers/: Phase3-Answers.md  TMP117.cpp  main.cpp
arduino/i2c_device/: i2c_device.ino
datasheets/: datasheets.md
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
include/: RampupBoard.hpp
include/dev/: ADXL345.hpp  Circle.hpp  HUDL.hpp  MAX22530.hpp  Rectangle.hpp  Shape.hpp  Square.hpp  TMP117.hpp
src/: RampupBoard.cpp  main.cpp
src/Arduino/: Arduino.cpp  Arduino.hpp
src/dev/: ADXL345.cpp  Circle.cpp  HUDL.cpp  MAX22530.cpp  Rectangle.cpp  Square.cpp  TMP117.cpp
targets/: CMakeLists.txt
targets/canboard/: CMakeLists.txt  main.cpp
targets/hudl/: CMakeLists.txt  main.cpp
targets/phase0/: CMakeLists.txt  Instructions.md  answers.md  datatypes.cpp  instructions.md  main.cpp
targets/phase1/: CMakeLists.txt  GPIO.md  Instructions.md  Time.md  main.cpp
targets/phase2/: CMakeLists.txt  Instructions.md  answers.md  main.cpp
targets/phase3/: CMakeLists.txt  Instructions.md  answers.md  instructions.md  main.cpp
targets/phase4/: CMakeLists.txt  Instructions.md  main.cpp
targets/phase5/: CMakeLists.txt  Instructions.md  main.cpp
targets/phase6/: CMakeLists.txt  Instructions.md  main.cpp
targets/phase7/: CMakeLists.txt  Instructions.md  main.cpp
targets/rampup/: CMakeLists.txt  main.cpp
